--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/morgan": "^1.7.35",
     "@types/mysql": "2.15.3",
     "@types/node": "^9.4.7",
-    "@types/serve-favicon": "^2.2.28"
+    "@types/serve-favicon": "^2.2.28",
+    "typescript": "^2.7.2"
   }
 }
